# trello-velocity-calculator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  velocity.toml.example
src/: cli.rs  configuration.rs  main.rs
