[package]
name = "trello-velocity-calculator"
version = "2021.5.0"
authors = ["Tim Hütz <tim+github@janke.biz>"]
edition = "2018"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["native-tls", "json"]

[dependencies.lazy_static]
version = "1.4"
default-features = false

[dependencies.regex]
version = "1.5"
default-features = false
features = ["std"]

[dependencies.tokio]
version = "1.5"
default-features = false
features = ["full"]

[dependencies.toml]
version = "0.5"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["std", "derive", "color"]

[dependencies.cli-table]
version = "0.4"
default-features = false
features = ["derive"]